# AI_Employee_System

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  GITHUB_PUSH_INSTRUCTIONS.md  Hackathon-0.txt  LICENSE  README.md  SECURITY.md  SOCIAL_MEDIA_SETUP_GUIDE.md  docker-compose-odoo.yml  docker-compose.yml  main.py  pyproject.toml  syncthing-config.xml  test_bronze.sh  test_bronze_quick.py  test_drop.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci-cd.yml
.qwen/commands/: sp.clarify.md  sp.implement.md  sp.plan.md  sp.specify.md  sp.tasks.md  sp.taskstoissues.md
AI_Employee_Vault/: .gitignore  .syncthingignore  Business_Goals.md  Company_Handbook.md  Dashboard.md
docs/: HACKATHON_VALIDATION_REPORT.md  VALIDATION_SUMMARY.md  architecture.md  cloud_deployment.md  lessons_learned.md  migration_platinum.md  platinum_lessons_learned.md  ralph_wiggum_loop.md  security.md  vault_sync.md
history/: README.md
scripts/: backup_odoo.sh  cloud_install_docker.sh  install-all-mcp-servers.sh  pre-commit-hook.sh  scan_secrets.sh  security_audit.sh  start-odoo.sh  stop-odoo.sh  sync_scheduler.sh  sync_vault.sh
skills/: 01_process_needs_action.md  02_update_dashboard.md  03_request_approval.md  04_execute_approved.md  05_log_events.md  06_create_plan.md  07_execute_approved_hitl.md  08_ralph_wiggum_loop.md  09_ceo_briefing.md  10_social_media_manager.md  11_odoo_accounting.md  12_error_recovery.md
src/: __init__.py
src/mcp/: __init__.py  (+10 more)
tests/: PLATINUM_DEMO_RESULTS.md  test_platinum_demo.py
(+66 files in other folders)
